refactor lambda terraform
moved all terraform to a single place since we will replace container

added docker helper function for tag-and-push

added some more slides for lambda

additional slide cleanup

--- a/devshell.toml
+++ b/devshell.toml
@@ -15,6 +15,12 @@ help = "credential process helper for aws"
 category = "helpers"
 
 [[commands]]
+name = "tag_and_push_lambda"
+command = "${PRJ_ROOT}/scripts/tag_and_push_lambda.sh"
+help = "credential process helper for aws"
+category = "helpers"
+
+[[commands]]
 package = "docker"
 
 [[env]]
